# move-ffi

./: Cargo.toml  Makefile
cmd/: main.go
lib/: move.h
src/: internal.rs  lib.rs
