[package]
name = "go-move"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
sha256 = "1.0.3"
move-vm-runtime = { git = "https://github.com/diem/move"}
move-binary-format = { git = "https://github.com/diem/move"}
move-core-types = { git = "https://github.com/diem/move"}
move-vm-types = { git = "https://github.com/diem/move"}